--- a/feishu-clippy/preview.html
+++ b/feishu-clippy/preview.html
@@ -39,8 +39,8 @@
     </style>
 </head>
 <body>
-    <iframe src="https://bytedance.larkoffice.com/docx/RNZ6dnIAwoppeSxq1ZscJaM2nzc" class="preview-page"></iframe>
-    <a id="download" href="https://greasyfork.org/en/scripts/491246-feifei-clippy-%E6%96%87%E6%A1%A3%E5%B0%8F%E5%B8%AE%E6%89%8B">Download on Tampermonkey | 通过油猴脚本添加 📎 到你的在线文档</a>
+    <iframe src="https://waytoagi.feishu.cn/wiki/QPe5w5g7UisbEkkow8XcDmOpn8e" class="preview-page"></iframe>
+    <a id="download" href="https://greasyfork.org/en/scripts/491246-feifei-clippy-%E6%96%87%E6%A1%A3%E5%B0%8F%E5%B8%AE%E6%89%8B">Download for Tampermonkey | 通过油猴脚本添加 📎 到你的在线文档</a>
 
 
     <script>
