--- a/disturb/index.html
+++ b/disturb/index.html
@@ -15,7 +15,16 @@
             margin: 0;
             background: linear-gradient(180deg, #D8E3F1 0%, #DFE4F3 100%);
         }
-
+        #noise-bg{
+            background-image: url("noise.png");
+            background-repeat: repeat;
+            position: absolute;
+            width: 100%;
+            height: 100%;
+            z-index: 10;
+            mix-blend-mode: darken;
+            opacity: 5%;
+        }
         .button {
             border-radius: 12px;
             border: 0;
@@ -50,6 +59,7 @@
             width: 728px;
             height: 943px;
             scale: .75;
+            z-index: 20;
         }
 
         #bottomArea{
@@ -79,6 +89,7 @@
         <div id="text" class="hide notice offset cursorDisable"></div>
         <div id="bottomArea" class="cursorDisable"></div>
     </div>
+    <div id="noise-bg"></div>
 
 
     <script>
