--- a/feishu-clippy/index.html
+++ b/feishu-clippy/index.html
@@ -16,6 +16,10 @@
             padding: 0;
             font-family: "fusion-pixel", sans-serif;
             font-size: 12px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
         }
         p{
             line-height: 150%;
