--- a/animation_snippet/mygo_banner.html
+++ b/animation_snippet/mygo_banner.html
@@ -21,10 +21,10 @@
         }
         .background {
             position: absolute;
-            top: 0;
+            top: -15%;
             left: 0;
             width: 100%;
-            height: 120%;
+            height: 140%;
             background-size: cover;
             background-position: left top;
             animation: moveUpwards 20s linear infinite;
