--- a/creative_coding/safari_item_dissipate/index.html
+++ b/creative_coding/safari_item_dissipate/index.html
@@ -14,6 +14,6 @@
 
   <body>
     <script src="sketch.js"></script>
-    <button onclick="window.location.reload()">Refresh Page</button>
+    <!-- <button onclick="window.location.reload()">Refresh Page</button> -->
   </body>
 </html>
