--- a/feishu-group-card/index.html
+++ b/feishu-group-card/index.html
@@ -113,7 +113,7 @@
         </div>
         <div class="card-bottom">
             <div class="group-text" id="groupText">Group</div>
-            <a href="#" class="join-button" id="joinButton">加入</a>
+            <a href="#" class="join-button" id="joinButton" target="_blank">加入</a>
         </div>
     </div>
 
