--- a/feishu-group-card/index.html
+++ b/feishu-group-card/index.html
@@ -15,6 +15,7 @@
             width: 100%;
             height: 100%;
             font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif;
+            overflow: hidden;
         }
 
         .card {
