--- a/pocketReaderConverter/index.html
+++ b/pocketReaderConverter/index.html
@@ -308,7 +308,7 @@
             // 模拟原代码中的 turn_str_lst 功能
             const processedText = textArray.map(char => {
                 if (char === '\n') {
-                    return '\\n';
+                    return '\n';
                 }
                 return char;
             });
