--- a/moon/moon1.html
+++ b/moon/moon1.html
@@ -29,7 +29,7 @@
         const canvas = document.getElementById('canvas');
 
         const r = new rive.Rive({
-            src: "moon.riv",
+            src: "moon1.riv",
             canvas: document.getElementById("canvas"),
             autoplay: true,
             stateMachines: "main",
